--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <body>
     <div class="container">
-        <label for="urlInput">Enter URL:</label>
-        <input type="text" id="urlInput" placeholder="https://example.com" />
+        <label for="urlInput">Enter Anything What You Want</label>
+        <input type="text" id="urlInput" placeholder="Enter Anything" />
         <button onclick="generateQRCode()">Generate QR Code</button>
         <div id="qrcode"></div>
         <br>
